Fixed header and footer drop and set Error page title to white on dark mode

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -112,7 +112,7 @@ body.dark {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .container--main {
@@ -146,6 +146,10 @@ main {
   font-weight: 600;
   line-height: 1.3;
   color: var(--neutral-900);
+}
+
+body.dark .error__title {
+  color: #fff;
 }
 
 /* Nav */
